# abels-complex-rs

./: Cargo.toml  README.MD  README.md  flake.nix
src/: lib.rs  polar.rs  rectangular.rs  traits.rs
src/complex/: mod.rs  polar.rs  rectangular.rs
src/complex/f32/: polar.rs  rectangular.rs
src/complex/f64/: mod.rs  polar.rs  rectangular.rs
