[package]
name = "abels-complex"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "rand", "approx", "glam"]
std = ["glam?/std"]
libm = ["dep:num-traits", "num-traits/libm", "glam?/libm"]
rand = ["dep:rand"]
approx = ["dep:approx"]
glam = ["dep:glam"]

[dependencies]
glam = { version = "0.30.5", default-features = false, optional = true }
approx = { version = "0.5.1", optional = true }
num-traits = { version = "0.2.19", default-features = false, optional = true }
rand = { version = "0.9.1", default-features = false, optional = true }

[dev-dependencies]
rand = { version = "0.9.1", default-features = false, features = ["std_rng"] }
approx = "0.5.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_arch, values("spirv"))',
] }
